# haskell-updater

./: .gitmodules  Main.hs  haskell-updater.aux  haskell-updater.cabal  haskell-updater.hp  haskell-updater.prof
.github/workflows/: haskell.yml
Distribution/Gentoo/: GHC.hs
Distribution/Gentoo/Types/: HUMode.hs
src/: Main.hs  Output.hs
src-exe/: Main.hs
src-exe/Distribution/Gentoo/: GHC.hs  Packages.hs
src/Data/: MonoidMap.hs
src/Distribution/Gentoo/: Env.hs  GHC.hs  Packages.hs  PkgManager.hs  Types.hs  Util.hs
src/Distribution/Gentoo/Types/: HUMode.hs  Mode.hs
