cabal-version:      3.0
name:               haskell-updater
homepage:           https://github.com/gentoo-haskell/haskell-updater#readme
bug-reports:        https://github.com/gentoo-haskell/haskell-updater/issues
version:            1.3.2
synopsis:           Rebuild Haskell dependencies in Gentoo
description:
  haskell-updater rebuilds Haskell packages on Gentoo
  after a GHC upgrade or a dependency upgrade.
  haskell-updater is written so as to use only
  GHC's boot libraries so as to have no external
  dependencies.

category:           Distribution
license:            GPL-3.0-or-later
license-file:       LICENSE
copyright:
  (c) Ivan Lazar Miljenovic,
  Lennart Kolmodin,
  Stephan Friedrichs,
  Emil Karlson

author:
  Ivan Lazar Miljenovic,
  Lennart Kolmodin,
  Stephan Friedrichs,
  Emil Karlson

maintainer:         haskell@gentoo.org
build-type:         Simple
extra-source-files:
  man/haskell-updater.1
  TODO

tested-with:        GHC ==8.10.7 || ==9.0.2 || ==9.2.8 || ==9.4.5

source-repository head
  type:     git
  location: https://github.com/gentoo-haskell/haskell-updater.git

flag pedantic
  description: Enable -Werror
  default:     False
  manual:      True

common all
  ghc-options: -Wall -Wunused-packages

  if flag(pedantic)
    ghc-options: -Werror

library haskell-updater-external-filepath
  import:           all
  hs-source-dirs:   filepath
  default-language: Haskell2010

  build-depends:
    , base              >=4.9
    , bytestring        >=0.11.3.0
    , deepseq
    , exceptions
    , template-haskell

  exposed-modules:
    System.FilePath
    System.FilePath.Posix
    System.FilePath.Windows
    System.OsPath
    System.OsPath.Data.ByteString.Short
    System.OsPath.Data.ByteString.Short.Internal
    System.OsPath.Data.ByteString.Short.Word16
    System.OsPath.Encoding
    System.OsPath.Encoding.Internal
    System.OsPath.Internal
    System.OsPath.Posix
    System.OsPath.Posix.Internal
    System.OsPath.Types
    System.OsPath.Windows
    System.OsPath.Windows.Internal
    System.OsString
    System.OsString.Internal
    System.OsString.Internal.Types
    System.OsString.Posix
    System.OsString.Windows

library haskell-updater-internal
  import:           all
  hs-source-dirs:   src
  default-language: Haskell2010
  build-depends:
    , haskell-updater-external-filepath
    , base        >=4.13    && <5
    , bytestring
    , Cabal       >=1.8
    , containers
    , directory   >=1.2.5.0
    , exceptions
    , mtl
    , parsec
    , pretty
    , process
    , text

  exposed-modules:
    Data.MonoidMap
    Distribution.Gentoo.Env
    Distribution.Gentoo.GHC
    Distribution.Gentoo.Packages
    Distribution.Gentoo.PkgManager
    Distribution.Gentoo.Types
    Distribution.Gentoo.Util
    Output

executable haskell-updater
  import:           all
  hs-source-dirs:   src-exe
  main-is:          Main.hs
  other-modules:    Paths_haskell_updater
  autogen-modules:  Paths_haskell_updater
  build-depends:
    , haskell-updater-internal
    , base        >=4.12    && <5
    , containers
    , mtl
    , process

  default-language: Haskell2010
